--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
 
         <audio id="background-music" loop>
-            <source src="background-music.mp3" type="audio/mp3">
+            <source src="background-song.mp3" type="audio/mp3">
         </audio>
 
         <canvas class="snow"></canvas>
