Hide start link in interactive card

--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
 #start-link {
     visibility: hidden;
 }
+@media (max-width: 600px) {
+    #start-link {
+        font-size: 14px;
+    }
+}
 
     </style>
 </head>
